--- a/requirements.txt
+++ b/requirements.txt
@@ -17,22 +17,20 @@
 
 # # Mapping (only if actually used)
 # folium>=0.14
-# Core Data Science - Python 3.13 compatible
-pandas==2.2.1
+
+# Core Data Science - Python 3.13 compatible versions
+pandas==2.2.0
 numpy==1.26.4
-matplotlib==3.8.4
+matplotlib==3.8.3
 seaborn==0.13.2
 plotly==5.18.0
 
 # Dashboard
-streamlit==1.33.0
+streamlit==1.32.0
 streamlit-aggrid==0.3.4.post3
 streamlit-option-menu==0.3.6
 
-# Utilities - UPDATED FOR PYTHON 3.13
+# Utilities
 scipy==1.13.0
-scikit-learn==1.5.0  # CHANGED: 1.5.0 works with Python 3.13
-openpyxl==3.1.3
-
-# Optional - remove if not used
-# folium==0.15.1
+scikit-learn==1.4.2
+openpyxl==3.1.2
